fix: alignement texte alerte info

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       padding: 0;
       background: var(--background-default-grey, #f6f6f6);
       font-family: Marianne, Arial, sans-serif;
-      font-size: 14px;
+      font-size: 15px;
     }
 
     .widget-container {
@@ -200,11 +200,8 @@
     .alert {
       padding: 0.75rem 1rem;
       border-radius: 0.25rem;
-      font-size: 0.85rem;
+      font-size: 0.9rem;
       margin-bottom: 1rem;
-      display: flex;
-      gap: 0.5rem;
-      align-items: flex-start;
     }
     .alert--info { background: #e8edff; color: #000091; border-left: 3px solid #000091; }
     .alert--error { background: #ffe9e9; color: #ce0500; border-left: 3px solid #ce0500; }
@@ -321,7 +318,7 @@
 
   <!-- Info -->
   <div class="alert alert--info">
-    Génère des URLs d'API Grist avec filtre dynamique <code>{id}</code> pour intégration dans le champ référentiel avancé de Démarche Numérique.
+    <strong>Information</strong><br/><span style="display:block;margin-top:0.25rem">Cet outil vous permet de générer des URLs d'API Grist avec filtres dynamiques pour intégrer vos données dans le champ référentiel avancé de Démarche Numérique.</span>
   </div>
 
   <!-- Formulaire -->
