--- a/index.html
+++ b/index.html
@@ -11,231 +11,213 @@
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
 
   <style>
-    /* ── Layout widget compact ── */
+    /* ── Reset ── */
     *, *::before, *::after { box-sizing: border-box; }
 
+    /* ── Base fluide ── */
     html, body {
       margin: 0;
       padding: 0;
-      background: var(--background-default-grey, #f6f6f6);
+      background: #f6f6f6;
       font-family: Marianne, Arial, sans-serif;
-      font-size: 15px;
+      /* Taille fluide : 14px à 280px, 16px à 700px+ */
+      font-size: clamp(14px, 1.5vw + 10px, 16px);
+      line-height: 1.5;
     }
 
     .widget-container {
       max-width: 720px;
       margin: 0 auto;
-      padding: 1.25rem 1rem 2rem;
+      padding: clamp(0.75rem, 3vw, 1.5rem) clamp(0.75rem, 3vw, 1.25rem) 2rem;
     }
 
+    /* ── Header ── */
     .widget-header {
       display: flex;
       align-items: center;
       gap: 0.5rem;
-      margin-bottom: 1.25rem;
-      padding-bottom: 0.75rem;
-      border-bottom: 2px solid var(--border-default-blue-france, #000091);
+      margin-bottom: clamp(0.75rem, 2vw, 1.25rem);
+      padding-bottom: 0.6rem;
+      border-bottom: 2px solid #000091;
     }
-
+    .widget-header svg {
+      flex-shrink: 0;
+      width: clamp(32px, 5vw, 48px);
+      height: auto;
+    }
     .widget-header h1 {
-      font-size: 1.25rem;
+      font-size: clamp(1rem, 2.5vw + 0.5rem, 1.3rem);
       font-weight: 700;
       margin: 0;
-      color: var(--text-title-blue-france, #000091);
+      color: #000091;
+      line-height: 1.2;
     }
 
-    /* ── Statut de connexion Grist ── */
+    /* ── Statut connexion ── */
     #grist-status {
       display: flex;
       align-items: center;
       gap: 0.4rem;
-      font-size: 0.8rem;
-      padding: 0.4rem 0.75rem;
+      font-size: clamp(0.75rem, 1.5vw + 0.4rem, 0.875rem);
+      padding: 0.35rem 0.75rem;
       border-radius: 1rem;
-      margin-bottom: 1rem;
+      margin-bottom: 0.875rem;
       font-weight: 500;
     }
-    #grist-status.status-ok {
-      background: #dffee7;
-      color: #18753c;
-    }
-    #grist-status.status-loading {
-      background: #e8edff;
-      color: #000091;
-    }
-    #grist-status.status-error {
-      background: #ffe9e9;
-      color: #ce0500;
-    }
+    #grist-status.status-ok    { background: #dffee7; color: #18753c; }
+    #grist-status.status-loading { background: #e8edff; color: #000091; }
+    #grist-status.status-error { background: #ffe9e9; color: #ce0500; }
     #grist-status .dot {
-      width: 8px;
-      height: 8px;
+      width: 8px; height: 8px;
       border-radius: 50%;
       background: currentColor;
       flex-shrink: 0;
     }
-    #grist-status.status-loading .dot {
-      animation: pulse 1.2s ease-in-out infinite;
-    }
-    @keyframes pulse {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.3; }
-    }
+    #grist-status.status-loading .dot { animation: pulse 1.2s ease-in-out infinite; }
+    @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
 
     /* ── Formulaire ── */
-    .fr-label { font-weight: 600; font-size: 0.875rem; }
-    .fr-hint-text { font-size: 0.775rem; color: var(--text-mention-grey, #666); margin-top: 0.1rem; }
-
-    .fr-select-group { margin-bottom: 1rem; }
+    .fr-label {
+      display: block;
+      font-weight: 600;
+      font-size: clamp(0.8rem, 1.5vw + 0.4rem, 0.95rem);
+    }
+    .fr-hint-text {
+      display: block;
+      font-size: clamp(0.72rem, 1vw + 0.4rem, 0.82rem);
+      color: #666;
+      margin-top: 0.15rem;
+      margin-bottom: 0.25rem;
+    }
+    .fr-select-group { margin-bottom: clamp(0.75rem, 2vw, 1.1rem); }
     .fr-select {
       width: 100%;
-      padding: 0.5rem 0.75rem;
-      border: 1px solid var(--border-default-grey, #929292);
+      padding: clamp(0.4rem, 1vw, 0.6rem) 0.75rem;
+      border: 1px solid #929292;
       border-radius: 0.25rem;
       background: white;
-      font-size: 0.875rem;
+      font-size: clamp(0.8rem, 1.5vw + 0.4rem, 0.95rem);
       font-family: inherit;
-      margin-top: 0.3rem;
+      margin-top: 0.2rem;
       appearance: auto;
     }
-    .fr-select:disabled {
-      background: var(--background-disabled-grey, #e5e5e5);
-      color: var(--text-disabled-grey, #929292);
-      cursor: not-allowed;
-    }
-    .fr-select:focus {
-      outline: 2px solid var(--focus-color, #0a76f6);
-      outline-offset: 2px;
-    }
+    .fr-select:disabled { background: #e5e5e5; color: #929292; cursor: not-allowed; }
+    .fr-select:focus { outline: 2px solid #0a76f6; outline-offset: 2px; }
 
     /* ── Boutons ── */
     .fr-btn {
       display: inline-flex;
       align-items: center;
       gap: 0.4rem;
-      padding: 0.5rem 1rem;
+      padding: clamp(0.4rem, 1vw, 0.55rem) clamp(0.75rem, 2vw, 1rem);
       border: none;
       border-radius: 0.25rem;
       font-family: inherit;
-      font-size: 0.875rem;
+      font-size: clamp(0.8rem, 1.5vw + 0.4rem, 0.95rem);
       font-weight: 600;
       cursor: pointer;
       text-decoration: none;
       transition: background 0.15s, color 0.15s;
     }
-    .fr-btn--primary, .fr-btn:not(.fr-btn--secondary) {
-      background: var(--background-action-high-blue-france, #000091);
-      color: white;
-    }
-    .fr-btn--primary:hover { background: #1212ff; }
-    .fr-btn--secondary {
-      background: transparent;
-      color: var(--text-action-high-blue-france, #000091);
-      border: 1px solid currentColor;
-    }
+    .fr-btn:not(.fr-btn--secondary) { background: #000091; color: white; }
+    .fr-btn:not(.fr-btn--secondary):hover { background: #1212ff; }
+    .fr-btn--secondary { background: transparent; color: #000091; border: 1px solid currentColor; }
     .fr-btn--secondary:hover { background: #f0f0ff; }
-    .fr-btn:disabled {
-      background: var(--background-disabled-grey, #e5e5e5);
-      color: var(--text-disabled-grey, #929292);
-      border-color: transparent;
-      cursor: not-allowed;
-    }
-    .fr-btn--sm { padding: 0.35rem 0.75rem; font-size: 0.8rem; }
+    .fr-btn:disabled { background: #e5e5e5; color: #929292; border-color: transparent; cursor: not-allowed; }
+    .fr-btn--sm { padding: 0.3rem 0.65rem; font-size: clamp(0.75rem, 1vw + 0.4rem, 0.85rem); }
     .fr-btn--loading { pointer-events: none; opacity: 0.7; }
 
     .btns-row {
       display: flex;
       flex-wrap: wrap;
       gap: 0.5rem;
-      margin-top: 1rem;
+      margin-top: 0.875rem;
     }
+    /* Narrow : boutons pleine largeur */
+    @container (max-width: 360px) {
+      .btns-row { flex-direction: column; }
+      .btns-row .fr-btn { width: 100%; justify-content: center; }
+    }
+
+    /* ── Alerte ── */
+    .alert {
+      padding: clamp(0.6rem, 2vw, 0.875rem) clamp(0.75rem, 2vw, 1rem);
+      border-radius: 0.25rem;
+      font-size: clamp(0.8rem, 1.5vw + 0.4rem, 0.95rem);
+      margin-bottom: 0.875rem;
+      line-height: 1.5;
+    }
+    .alert--info    { background: #e8edff; color: #000091; border-left: 3px solid #000091; }
+    .alert--error   { background: #ffe9e9; color: #ce0500; border-left: 3px solid #ce0500; }
+    .alert--success { background: #dffee7; color: #18753c; border-left: 3px solid #18753c; }
+    .alert a { text-decoration: none !important; color: #000091; font-weight: 600; }
+    .alert a:hover { opacity: 0.8; }
 
     /* ── Résultat ── */
-    #result { margin-top: 1.25rem; }
-
-    .result-card {
-      border: 1px solid var(--border-default-grey, #ddd);
-      border-radius: 0.375rem;
-      overflow: hidden;
-    }
-
+    #result { margin-top: 1rem; }
+    .result-card { border: 1px solid #ddd; border-radius: 0.375rem; overflow: hidden; }
     .result-card-header {
-      background: var(--background-action-high-blue-france, #000091);
-      color: white;
-      padding: 0.6rem 1rem;
+      background: #000091; color: white;
+      padding: 0.55rem 1rem;
       font-weight: 700;
-      font-size: 0.875rem;
-      display: flex;
-      align-items: center;
-      gap: 0.4rem;
+      font-size: clamp(0.8rem, 1.5vw + 0.4rem, 0.95rem);
     }
-
-    .result-card-body { padding: 1rem; background: white; }
+    .result-card-body { padding: clamp(0.75rem, 2vw, 1rem); background: white; }
 
     .url-block {
       background: #f4f4f4;
-      border-left: 3px solid var(--border-default-blue-france, #000091);
-      padding: 0.75rem 1rem;
+      border-left: 3px solid #000091;
+      padding: 0.6rem 0.875rem;
       border-radius: 0 0.25rem 0.25rem 0;
-      margin-bottom: 1rem;
+      margin-bottom: 0.875rem;
       word-break: break-all;
       font-family: 'Courier New', monospace;
-      font-size: 0.8rem;
+      font-size: clamp(0.7rem, 1vw + 0.4rem, 0.8rem);
       line-height: 1.5;
     }
 
     .meta-grid {
       display: grid;
       grid-template-columns: auto 1fr;
-      gap: 0.25rem 0.75rem;
-      font-size: 0.8rem;
-      margin-bottom: 1rem;
+      gap: 0.2rem 0.6rem;
+      font-size: clamp(0.75rem, 1vw + 0.4rem, 0.85rem);
+      margin-bottom: 0.875rem;
     }
     .meta-grid dt { font-weight: 600; color: #555; white-space: nowrap; }
-    .meta-grid dd { margin: 0; color: #333; }
+    .meta-grid dd { margin: 0; color: #333; word-break: break-word; }
 
-    /* ── Alerte info / erreur ── */
-    .alert {
-      padding: 0.75rem 1rem;
-      border-radius: 0.25rem;
-      font-size: 0.9rem;
-      margin-bottom: 1rem;
+    /* Narrow : meta en colonne unique */
+    @media (max-width: 380px) {
+      .meta-grid { grid-template-columns: 1fr; gap: 0.1rem; }
+      .meta-grid dt { margin-top: 0.4rem; }
     }
-    .alert--info { background: #e8edff; color: #000091; border-left: 3px solid #000091; }
-    .alert a { text-decoration: none !important; color: #000091; font-weight: 600; }
-    .alert a:hover { text-decoration: none !important; opacity: 0.8; }
-    .alert--error { background: #ffe9e9; color: #ce0500; border-left: 3px solid #ce0500; }
-    .alert--success { background: #dffee7; color: #18753c; border-left: 3px solid #18753c; }
 
-    /* ── Accordéon résultat test ── */
-    .accordion { border: 1px solid #ddd; border-radius: 0.25rem; margin-top: 1rem; }
+    /* ── Accordéon ── */
+    .accordion { border: 1px solid #ddd; border-radius: 0.25rem; margin-top: 0.875rem; }
     .accordion__btn {
       width: 100%;
-      padding: 0.75rem 1rem;
+      padding: 0.65rem 0.875rem;
       background: #f8f8f8;
       border: none;
       text-align: left;
-      font-size: 0.85rem;
+      font-size: clamp(0.78rem, 1.2vw + 0.4rem, 0.9rem);
       font-weight: 600;
       cursor: pointer;
       display: flex;
       justify-content: space-between;
       align-items: center;
       font-family: inherit;
+      gap: 0.5rem;
     }
     .accordion__btn:hover { background: #ebebeb; }
-    .accordion__btn::after { content: "▾"; transition: transform 0.2s; }
+    .accordion__btn::after { content: "▾"; flex-shrink: 0; transition: transform 0.2s; }
     .accordion__btn[aria-expanded="true"]::after { transform: rotate(180deg); }
-    .accordion__body {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.3s ease;
-    }
+    .accordion__body { max-height: 0; overflow: hidden; transition: max-height 0.3s ease; }
     .accordion__body.open { max-height: 400px; overflow-y: auto; }
     .accordion__body pre {
       margin: 0;
-      padding: 0.75rem 1rem;
-      font-size: 0.78rem;
+      padding: 0.65rem 0.875rem;
+      font-size: clamp(0.68rem, 1vw + 0.3rem, 0.78rem);
       font-family: 'Courier New', monospace;
       line-height: 1.4;
       white-space: pre-wrap;
@@ -247,11 +229,10 @@
     /* ── Toast ── */
     #toast {
       position: fixed;
-      bottom: 1rem;
-      right: 1rem;
-      padding: 0.6rem 1rem;
+      bottom: 1rem; right: 1rem;
+      padding: 0.55rem 0.875rem;
       border-radius: 0.25rem;
-      font-size: 0.85rem;
+      font-size: clamp(0.8rem, 1.5vw + 0.4rem, 0.9rem);
       font-weight: 600;
       background: #18753c;
       color: white;
@@ -263,7 +244,7 @@
     }
     #toast.show { opacity: 1; transform: translateY(0); }
 
-    /* ── Modale test valeur ── */
+    /* ── Modale ── */
     .modal-overlay {
       display: none;
       position: fixed;
@@ -272,24 +253,28 @@
       z-index: 1000;
       align-items: center;
       justify-content: center;
+      padding: 1rem;
     }
     .modal-overlay.open { display: flex; }
     .modal-box {
       background: white;
       border-radius: 0.375rem;
-      padding: 1.5rem;
-      width: 360px;
-      max-width: 95vw;
+      padding: clamp(1rem, 4vw, 1.5rem);
+      width: 100%;
+      max-width: 380px;
       box-shadow: 0 4px 24px rgba(0,0,0,0.18);
     }
-    .modal-box h2 { font-size: 1rem; margin: 0 0 0.75rem; }
+    .modal-box h2 {
+      font-size: clamp(0.9rem, 2vw + 0.4rem, 1.05rem);
+      margin: 0 0 0.75rem;
+    }
     .modal-box input {
       width: 100%;
-      padding: 0.5rem 0.75rem;
+      padding: clamp(0.4rem, 1vw, 0.55rem) 0.75rem;
       border: 1px solid #929292;
       border-radius: 0.25rem;
       font-family: inherit;
-      font-size: 0.875rem;
+      font-size: clamp(0.8rem, 1.5vw + 0.4rem, 0.95rem);
       margin-bottom: 1rem;
     }
     .modal-box input:focus { outline: 2px solid #0a76f6; outline-offset: 2px; }
