--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     }
 
     /* ── Breakpoints via ResizeObserver ── */
-    /* narrow  : < 380px  → .w-narrow  */
-    /* medium  : 380–560px → .w-medium  */
-    /* large   : > 560px  → (défaut)   */
+    /* narrow  : < 700px  → .w-narrow  */
+    /* medium  : 700–1000px → .w-medium  */
+    /* large   : > 1000px → (défaut)   */
 
     .w-narrow { font-size: 13px; }
     .w-medium { font-size: 14px; }
@@ -378,21 +378,26 @@
 // ──────────────────────────────────────────────
 (function() {
   const body = document.body;
-  // Observer le widget-container, pas le body
-  const container = document.querySelector('.widget-container');
-  const observer = new ResizeObserver(entries => {
-    const width = entries[0].contentRect.width;
-    body.classList.remove('w-narrow', 'w-medium');
-    if (width < 380) body.classList.add('w-narrow');
-    else if (width < 560) body.classList.add('w-medium');
-    console.log('[Moose] ResizeObserver container width:', width, '→ classes:', body.className);
-  });
-  if (container) {
-    observer.observe(container);
-    console.log('[Moose] ResizeObserver initialisé sur .widget-container');
-  } else {
-    console.warn('[Moose] .widget-container introuvable');
+  let currentBreakpoint = '';
+
+  function applyBreakpoint() {
+    const width = window.innerWidth;
+    let bp = '';
+    if (width < 700) bp = 'w-narrow';
+    else if (width < 1000) bp = 'w-medium';
+
+    // Ne modifier le DOM que si le breakpoint change (évite la boucle)
+    if (bp !== currentBreakpoint) {
+      body.classList.remove('w-narrow', 'w-medium');
+      if (bp) body.classList.add(bp);
+      currentBreakpoint = bp;
+      console.log('[Moose] breakpoint:', bp || 'large', '(width:', width + ')');
+    }
   }
+
+  // Appel initial + sur resize fenêtre
+  applyBreakpoint();
+  window.addEventListener('resize', applyBreakpoint);
 })();
 
 // ──────────────────────────────────────────────
